# git-watch

./: Cargo.toml  README.md  config.sample.yml
src/: config.rs  git.rs  main.rs  model.rs  ui.rs  watcher.rs
tests/: git_test.rs
